# temp

./: 1.md  LLVM - 笔记.md  china_geo.json  detect_shadowsocks.py
LLVM/: 0 - 源码分析  1 - tools  2 - gen_bc  3 - project  5 - Backend  llvm-DAT2DAGISel.txt  llvm-Pass.txt  llvm-TargetMachine.txt
PycharmProjects_2016/python3/: asyncio_test1.py  gym_test.py  newaxis_test.py  numpy_test.py  pytorch_test1.py  pytorch_test3.py  qlearning_2.py  qlearning_3.py  random_test1.py  tensorflow_test1.py  tensorflow_test2.py  tensorflow_test3.py  thread_test.py  tqdm_test.py  unzip_test.py  wrapper_test.py  yiled_test1.py
PycharmProjects_2016/ros_project/: buf_fucker_train_2.py  check_flight_mode.py  gps_diagnostic.py  listener.py  offboard_control_node.py
PycharmProjects_2016/tf_project/: csv_data_1.py  csv_data_2.py  icm_nn_1.py  meisai_cnn.py  mnist_cnn.py  mnist_conv1d.py  mnist_softmax.py  mnist_with_summaries.py  scalar_mul.py  tf_test1.py  tf_test2.py
PycharmProjects_2016/win/: a_star.py  clustering_and_visualizing.py  crypto_test2.py  csv_test.csv  csv_test.py  dijkstra.py  dos.py  down_dimension.py  image_test_1.py  image_test_2.py  implicit_function.py  jingjixue.py  kmeans.py  lq_test.py  lq_test2.py  lq_test3.py  lq_test4.py  meisai_00.py  meisai_01.py  meisai_02_ca.py  meisai_03_us.py  meisai_04_csv.py  multi_proc.py  nromallize_test.py  plot_1.py  plt_3d.py  pycrypto_test.py  requests_test.py  test.py  test_packages.py  urllib_test.py  walk_throw_folder.py
PycharmProjects_2017/cv/: weixin_2.py
PycharmProjects_2017/flaskr/: flaskr.py
PycharmProjects_2017/graduation/: animation_1.py  animation_2.py  grid_1.py  grid_2.py  grid_3.py  grid_4.py  grid_5.py  maze_1.csv  prim_1.py  prim_2.py  prim_3.py  rotation_with_timelag.py
PycharmProjects_2017/http/: collect_proxy.py
PycharmProjects_2017/network/: aiohttp_1.py  brute_1.py  brute_2.py  brute_3.py  client_1.py  coin.html  coin_1.py  coin_2.py  coins_1.json  executor_1.py  ips.txt  pty_1.py  rdp_1.py  restore.json  scanner_1.py  scanner_2.py  server_1.py  server_2.py  ss.crt  ss.key  ssh_1.py  ssh_2.py  targets.txt  test_1.py  test_2.py  tls_test1.py  tls_test2.py  tty_echo.sh
PycharmProjects_2017/optim/: pos_2.py  pso_1.py
PycharmProjects_2017/python3/: asyncio_test2.py  bitcask_1.py  bitcask_3.py  class_test1.py  class_test2.py  decorator_1.py  flask_1.conf  flask_1.ini  flask_1.py  generate_data_1.py  oswalk_test1.py  oswalk_test2.py  pytorch_test2.py  qlearning_1.py  sanic_1.py  sanic_2.py  skimage_test1.py  sqlite_1.py  test.db  tornado_1.py  tornado_2.py
PycharmProjects_2017/ros_project/: buf_fucker_node_2.py  checkpoint-1.pth.tar  checkpoint-10.pth.tar  checkpoint-11.pth.tar  checkpoint-12.pth.tar  checkpoint-13.pth.tar  checkpoint-14.pth.tar  checkpoint-15.pth.tar  checkpoint-16.pth.tar  checkpoint-17.pth.tar  checkpoint-18.pth.tar  checkpoint-19.pth.tar  checkpoint-2.pth.tar  checkpoint-20.pth.tar  checkpoint-21.pth.tar  checkpoint-22.pth.tar  checkpoint-23.pth.tar  checkpoint-24.pth.tar  checkpoint-25.pth.tar  checkpoint-26.pth.tar  checkpoint-3.pth.tar  checkpoint-4.pth.tar  checkpoint-5.pth.tar  (+4 more)
bash/: c_opt.sh  do_clean.sh  gen_bc.sh  main.c  run_parallel.sh
clhpp_projects/hello/: CMakeLists.txt  run.sh
clhpp_projects/hello/cl/: kernel.cl
clhpp_projects/hello/src/: main.cpp  utils.hpp
cmake_template/: CMakeLists.txt
cmake_template/cmake_hierarchical/: CMakeLists.txt
cpp_project/: CMakeLists.txt  basic_1.cpp  functional_1.cpp  lambda_1.cpp  message_1.cpp  move_1.cpp  mutex_1.cpp  mutex_2.cpp  mutex_3.cpp  mutex_4.cpp  numpy_1.cpp  ptr_1.cpp  sha256_1.cpp  utils.hpp  yield_1.cpp  yield_2.cpp
cpp_project/dot_vscode/: launch.json  tasks.json
cuda_project/: CMakeLists.txt
cuda_project/dot_vscode/: c_cpp_properties.json  launch.json  settings.json  tasks.json
cuda_project/include/utils/: helper_cuda.h
cuda_project/src/: main.cu
opengl_c/: CMakeLists.txt  Readme  untitled_0.c  untitled_1.c  untitled_2.c  untitled_3.c
rocksdb_wrapper/: CMakeLists.txt  run.sh
rocksdb_wrapper/script/: test_1.py
rocksdb_wrapper/src/: main.cpp  transaction_db_1.cpp  wrapper.cpp
(+85 files in other folders)
